css/ben-lee-properties.webflow.css
/* ... */
.property-grid-item-2:hover {
  z-index: 2;
  box-shadow: 0 20px 20px -20px #030c1866;
}

.property-grid-link-2 {
  z-index: 1;
  background-color: var(--white-smoke);
  flex-direction: column;
  align-self: stretch;
  align-items: flex-start;
  width: 100%;
  padding: 1.5em;
  transition: background-color .2s, box-shadow .3s, color .3s;
  display: flex;
  position: relative;
}

.property-grid-link-2:hover {
  z-index: 2;
  background-color: var(--white);
  color: var(--midnight-blue);
  box-shadow: 0 0 35px 15px #0512223d;
}

.property-image-grid-2 {
  z-index: 1;
  object-fit: cover;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  width: 100%;
  height: 20em;
  padding-bottom: 3em;
  display: flex;
  position: relative;
  overflow: hidden;
}

.property-detail-block-4 {
  border: 1px solid var(--silver);
  flex-direction: row;
  justify-content: center;
  align-items: center;
  width: 100%;
  padding: .9em .8em;
  display: flex;
  position: relative;
}

.property-details-in-grid {
  z-index: 20;
  -webkit-backdrop-filter: blur(6px);
  backdrop-filter: blur(6px);
  width: 94%;
  color: var(--midnight-blue-2);
  background-color: #ffffff80;
  border: 1px solid #ffffff8c;
  justify-content: space-between;
  align-self: stretch;
  margin-left: auto;
  margin-right: auto;
  display: flex;
  position: absolute;
  inset: auto 0 4%;
}

.property-detail-block-5 {
  text-align: center;
  flex-direction: row;
  justify-content: center;
  align-items: center;
  width: 100%;
  padding: .8em .5em;
  font-weight: 500;
  transition: background-color .2s, width .6s cubic-bezier(.075, .82, .165, 1);
  display: flex;
  position: relative;
}

.property-detail-block-5:hover {
  background-color: #fffc;
  width: 115%;
}

.property-address-title-2 {
  color: var(--midnight-blue-2);
  text-align: center;
  font-size: 1.5em;
  font-weight: 500;
  line-height: 1.3em;
  display: inline-block;
}

.property-address-title-2:hover {
  text-decoration: underline;
}

.property-inner-2 {
  z-index: 10;
  text-align: center;
  flex-direction: column;
  flex: 1;
  justify-content: center;
  align-items: center;
  width: 100%;
  padding-top: 1.7em;
  padding-bottom: 1.7em;
  display: flex;
  position: relative;
}

.property-address-block {
  justify-content: center;
  align-items: center;
  margin-bottom: .8em;
  display: flex;
}

.property-address-title-3 {
  color: var(--chocolate);
  text-align: center;
  letter-spacing: .1em;
  text-transform: uppercase;
  margin-left: .5em;
  margin-right: .5em;
  font-size: .8em;
  font-weight: 500;
  line-height: 1.3em;
  display: inline-block;
}

.property-address-title-3:hover {
  text-decoration: underline;
}

.grid-listing-symbol {
  width: 100%;
  margin-bottom: 4em;
}

.flex-listing-symbol, .grid-listing-2 {
  width: 100%;
}

.page-hero-3 {
  z-index: 10;
  background-image: url('../images/Screenshot-2025-10-13-at-10.49.55-PM.png');
  background-position: 50% 0;
  background-size: cover;
  flex-direction: column;
  align-items: flex-start;
  width: 100%;
  max-width: 1800px;
  margin-left: auto;
  margin-right: auto;
  padding: 7em 8em 10em;
  display: flex;
  position: relative;
}

.padding-listing-3 {
  margin-top: -4.5em;
  padding-bottom: 5em;
}

.tabs-3 {
  flex-direction: column;
  width: 100%;
}

.tabs-menu-3 {
  justify-content: flex-start;
  align-items: center;
  min-height: 4.5em;
  margin-bottom: 5.5em;
  display: flex;
  overflow: auto;
}

.tab-link-3 {
  color: #fff9;
  white-space: nowrap;
  background-color: #0000;
  border-bottom: 6px solid #0000;
  flex: none;
  align-self: stretch;
  align-items: center;
  margin-right: 4em;
  padding: .5em 0;
  transition: color .3s, background-color .3s, border-color .3s;
  display: flex;
}

.tab-link-3:hover {
  opacity: 1;
  color: var(--white);
}

.tab-link-3.w--current {
  border-bottom-color: var(--peru);
  color: var(--white);
  background-color: #0000;
}

.cover-hero-image {
  z-index: 0;
  object-fit: cover;
  width: 100%;
  height: 100%;
  position: absolute;
  inset: 0%;
}

.cover-hero-image-color {
  z-index: 1;
  mix-blend-mode: multiply;
  background-color: #0a223fa6;
  position: absolute;
  inset: 0%;
}

.tab-title-3 {
  letter-spacing: .05em;
  text-transform: uppercase;
  font-size: 1em;
  font-weight: 400;
}

.blurry-background {
  z-index: 2;
  -webkit-backdrop-filter: blur(10px);
  backdrop-filter: blur(10px);
  background-color: #ffffff12;
  border-top: 1px solid #ffffff2e;
  width: 100%;
  height: 5em;
  position: absolute;
  inset: auto 0% 0%;
}

.cover-hero-video-color {
  z-index: 1;
  mix-blend-mode: multiply;
  background-color: #0a223f66;
  position: absolute;
  inset: 0%;
}

.featured-wrapper-3 {
  background-color: var(--midnight-blue);
  width: 100%;
  display: flex;
  overflow: hidden;
}

.featured-list-3 {
  flex: 1;
  align-self: stretch;
  display: flex;
}

.featured-item-3 {
  flex-direction: column;
  flex: 1;
  justify-content: space-between;
  align-items: flex-start;
  display: flex;
  position: relative;
}

.featured-column-3 {
  z-index: 20;
  -webkit-backdrop-filter: blur(8px);
  backdrop-filter: blur(8px);
  background-color: #ff2222ad;
  flex-direction: column;
  justify-content: flex-start;
  align-items: flex-start;
  max-width: 26em;
  margin-bottom: 2em;
  padding: 4em;
  display: flex;
  position: relative;
}

.featured-gallery-3 {
  z-index: 15;
  align-self: stretch;
  padding-top: 1em;
  padding-bottom: 1em;
  position: relative;
}

.featured-gallery-list-3 {
  grid-column-gap: 1em;
  grid-row-gap: 1em;
  grid-template-rows: auto auto;
  grid-template-columns: 1fr 1fr;
  grid-auto-columns: 1fr;
  display: grid;
}

.gallery-lightbox-3 {
  flex: 1;
  height: 4.7em;
  display: flex;
  position: relative;
  overflow: hidden;
}
/* ... */

